# RusCorporaScrapper

./: .gitignore  README.md  biverbal_verbs.txt  config_loader.py  custom_parser.py  driver_init.py  facade_api.py  pyproject.toml  scrapper.py  start.py
biverbal_verbs/: imperfective_абонировать.json  imperfective_абонироваться.json  imperfective_абортировать.json  imperfective_абсолютировать.json  imperfective_напутствовать.json  imperfective_наркотизировать.json  imperfective_наследовать.json  imperfective_натурализовать.json  imperfective_таблетировать.json  imperfective_табуировать.json  imperfective_табулировать.json  imperfective_таргетировать.json  imperfective_тарировать.json  imperfective_тарифицировать.json  imperfective_татуировать.json  imperfective_телепортироваться.json  imperfective_телефонизировать.json  imperfective_телефонировать.json  imperfective_теплоизолировать.json  imperfective_терроризировать.json  imperfective_типизировать.json  imperfective_тиражировать.json  imperfective_торпедировать.json  imperfective_травмировать.json  imperfective_травмироваться.json  imperfective_трансгрессировать.json  imperfective_транскрибировать.json  imperfective_транслировать.json  imperfective_транслитерировать.json  imperfective_трансплантировать.json  imperfective_транспонировать.json  imperfective_транспортировать.json  imperfective_узурпировать.json  imperfective_украинизировать.json  imperfective_унифицировать.json  imperfective_урбанизировать.json  imperfective_утилизировать.json  imperfective_утрировать.json  imperfective_характеризовать.json  (+90 more)
(+11 files in other folders)
