[tool.poetry]
name = "ruscorpora-scraping-project"
version = "0.1.0"
description = "Проект для веб-скрапинга RusCorpora"
authors = ["..."]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.16.0"

[tool.poetry.dev-dependencies]
# Зависимости для разработки

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"