[tool.poetry]
name = "RusCorporaVerbScraper"
version = "0.1.0"
description = "Проект для веб-скрапинга RusCorpora с фокусом на двувидовые глаголы"
authors = ["Матвеев Максим, Айсина Алина, Шкунов Павел"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.16.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"